# FIN-413

./: pyproject.toml  requirements.txt  utils.py
data/: 2025 03 21 - EPFL Fin413 - Project Dataset Sendout.csv
